--- a/About.html
+++ b/About.html
@@ -40,8 +40,7 @@
         <h1 class="text">   Background of the Company<br>
           <br>The "Toy Alley" Company was established by 2JMNK Co. in 2022. Throughout its history, 
           Toy Alley has brought happiness, comfort, and creativity to clients in a range of industries. The five 
-          friends who made the decision to go it alone and create their own business, Mark Harold R. Ademe, Kiana 
-          Angeline B. Sobrevega, Joren Hanz S. Bumacod, Jan Maverick A. Cayabyab, and Nathaniel G. Abogadie are 
+          friends who made the decision to go it alone and create their own business, M*******, K******, J*******, J******, and N******* are 
           the ones who gave Toy Alley its start in the big industry. The first item sold by Toy Alley was a 
           "Turumpo," a well-known Filipino toy that was popular in the 1980s with both kids and adults. A common 
           iron nail is affixed to the bottom of a turumpo, an outdoor toy that is formed like a mixture of a 
